新增選單歷史紀錄頁
新增調整如下：
1.新增選單歷史紀錄
2.RWD手機板調整

--- a/quickclick/menu-history.html
+++ b/quickclick/menu-history.html
@@ -19,170 +19,201 @@
 </head>
 <body>
     <main class="main-container">
+        <p class="breadcrumb"><span>快一點</span> > <span>菜單歷史紀錄</span></p>
         <section class="top-content clearfix">
-            <h3 class="main-title">菜單管理</h3>
-            <a class="btn-products btn--primary-l">
-                <p>
-                    <span><i class="fas fa-shopping-basket"></i></span>
-                    商品庫
-                </p>
-            </a>
+            <h3 class="main-title">
+                <a href="menu.html">
+                    <span><i class="fas fa-arrow-left"></i></span>
+                    返回菜單管理
+                </a>
+            </h3>
+            <div class="search-box">
+                <input class="default" type="text" placeholder="搜尋關鍵字/發佈人">
+            </div>
         </section>
         <section class="middle-content">
-            <div class="menu-list">
-                <div class="add-new-card">
-                    <a class="popup-link" href="add_new_menu.html">
-                        <p>新增或匯入菜單</p>
-                    </a>
+            <div class="menu-history-list">
+                <div class="field-title field">
+                    <div class="menu-remark">
+                        <p>備註</p>
+                    </div>
+                    <div class="menu-renew">
+                        <p>更新時間</p>
+                    </div>
+                    <div class="menu-executor">
+                        <p>啟用者</p>
+                    </div>
                 </div>
-                <div class="card">
-                    <div class="label-type">
-                        <p>啟用中</p>
+                <div class="field">
+                    <p class="label-type">啟用中</p>
+                    <div class="menu-remark">
+                        <p class="now"><a href="#" target="_blank">15154864 --- 點擊名稱可直接預覽</a></p>
                     </div>
-                    <div class="more-features">
-                        <i class="fas fa-ellipsis-v"></i>
+                    <div class="menu-renew">
+                        <p>09/17 最新的在最上面</p>
                     </div>
-                    <div class="features-menu">
-                        <ul>
-                            <li>
-                                <a href="#">
-                                    <span><i class="fas fa-pencil-alt"></i></span>
-                                    編輯
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span><i class="far fa-copy"></i></span>
-                                    複製
-                                </a>
-                            </li>
-                            <li>
-                                <a class="popup-link" href="popup-delete-menu.html">
-                                    <span><i class="far fa-trash-alt"></i></span>
-                                    刪除
-                                </a>
-                            </li>
-                            <li>
-                                <a href="menu-history.html">
-                                    <span><i class="fas fa-history"></i></span>
-                                    歷史紀錄
-                                </a>
-                            </li>
-                            <li>
-                                <a class="popup-link" href="popup-choose-store.html"">
-                                    <span><i class="fas fa-share-square"></i></span>
-                                    將此菜單複製到其他店
-                                </a>
-                            </li>
-                            <li>
-                                <a class="popup-link" href="popup-choose-platform.html"">
-                                    <span><i class="fas fa-share-square"></i></span>將此菜單上架到其他平台
-                                </a>
-                            </li>
-                        </ul>
+                    <div class="menu-executor">
+                        <p>由 店家eaa@mail.com</p>
                     </div>
-                    <div class="logo">
-                        <img src="images/logo-quickclick.png">
+                    <div class="menu-tools">
+                        <a href="#"><i class="far fa-copy"></i></a>
                     </div>
-                    <div class="menu-title">
-                        <input class="" type="" name="" value="假日菜單">
-                    </div>
-                    <div class="btn-menu-actions">
-                        <a class="btn--primary-m" href="#" target="_blank">預覽</a>
-                    </div>
-                    <p class="update">上次更新：昨天 下午 6:00 · Kay</p>
                 </div>
-                <div class="card">
-                    <div class="label-type">
-                        <p>啟用中</p>
+                <div class="field">
+                    <div class="menu-remark">
+                        <p><a href="#">上架新品:南瓜湯</a></p>
                     </div>
-                    <div class="more-features">
-                        <i class="fas fa-ellipsis-v"></i>
+                    <div class="menu-renew">
+                        <p>09/16 週四 11:38:24</p>
                     </div>
-                    <div class="logo">
-                        <img src="images/logo-foodpanda.png">
+                    <div class="menu-executor">
+                        <p>由 店家eaa@mail.com</p>
                     </div>
-                    <div class="menu-title">
-                        <input class="" type="" name="" value="" placeholder="點此新增菜單名稱">
+                    <div class="menu-tools">
+                        <a href="#"><i class="far fa-copy"></i></a>
                     </div>
-                    <div class="btn-menu-actions">
-                        <a class="btn--primary-m" href="#" target="_blank">預覽</a>
-                    </div>
-                    <p class="update">上次更新：2021-10-22 下午 3:00 · Amber Liu</p>
                 </div>
-                <div class="card">
-                    <div class="more-features">
-                        <i class="fas fa-ellipsis-v"></i>
+                <div class="field">
+                    <div class="menu-remark">
+                        <p><a href="#">這是備注這是備注</a></p>
                     </div>
-                    <div class="logo">
-                        <img src="images/logo-ubereats.png">
+                    <div class="menu-renew">
+                        <p>09/16 週四 11:38:24</p>
                     </div>
-                    <div class="menu-title">
-                        <input class="" type="" name="" value="" placeholder="點此新增菜單名稱">
+                    <div class="menu-executor">
+                        <p>(ee發佈)</p>
                     </div>
-                    <div class="btn-menu-actions">
-                        <a class="btn--primary-m" href="#" target="_blank">預覽</a>
-                        <a class="btn--primary-m popup-link" href="#popup-activate-menu">啟用</a>
+                    <div class="menu-tools">
+                        <a href="#"><i class="far fa-copy"></i></a>
                     </div>
-                    <p class="update">上次更新：昨天 下午 6:00 · Kay</p>
                 </div>
-                <div class="card">
-                    <div class="label-type">
-                        <p>啟用中</p>
+                <div class="field">
+                    <div class="menu-remark">
+                        <p><a href="#">上架新品:南瓜湯</a></p>
                     </div>
-                    <div class="more-features">
-                        <i class="fas fa-ellipsis-v"></i>
+                    <div class="menu-renew">
+                        <p>09/16 週四 11:38:24</p>
                     </div>
-                    <div class="logo">
-                        <img src="images/logo-quickclick.png">
+                    <div class="menu-executor">
+                        <p>由 店家eaa@mail.com</p>
                     </div>
-                    <div class="menu-title">
-                        <input class="" type="" name="" value="一到五的商業菜單" placeholder="點此新增菜單名稱">
+                    <div class="menu-tools">
+                        <a href="#"><i class="far fa-copy"></i></a>
                     </div>
-                    <div class="btn-menu-actions">
-                        <a class="btn--primary-m" href="#" target="_blank">預覽</a>
-                        <!-- 編輯過未啟用菜單會一直顯示紅色提醒語 -->
-                        <a class="btn--primary-m popup-link bg-c-red" href="#popup-activate-menu">啟用
-                            <div class="tooltip">
-                                上次的新修改尚未啟用，請點選「啟用」來更新菜單內容。
-                            </div>
-                        </a>
-                    </div>
-                    <p class="update">上次更新：昨天 下午 6:00 · Kay</p>
                 </div>
-                <div class="card">
-                    <div class="more-features">
-                        <i class="fas fa-ellipsis-v"></i>
+                <div class="field">
+                    <div class="menu-remark">
+                        <p><a href="#">這是備注這是備注</a></p>
                     </div>
-                    <div class="logo">
-                        <img src="images/logo-quickclick.png">
+                    <div class="menu-renew">
+                        <p>09/16 週四 11:38:24</p>
                     </div>
-                    <div class="menu-title">
-                        <input class="" type="" name="" value="" placeholder="點此新增菜單名稱">
+                    <div class="menu-executor">
+                        <p>(Kay發佈)</p>
                     </div>
-                    <div class="btn-menu-actions">
-                        <a class="btn--primary-m" href="#" target="_blank">預覽</a>
-                        <a class="btn--primary-m popup-link" href="#popup-activate-menu">啟用</a>
+                    <div class="menu-tools">
+                        <a href="#"><i class="far fa-copy"></i></a>
                     </div>
-                    <p class="update">上次更新：昨天 下午 6:00 · Kay</p>
                 </div>
-                <div class="card">
-                    <div class="more-features">
-                        <i class="fas fa-ellipsis-v"></i>
+                <div class="field">
+                    <div class="menu-remark">
+                        <p class="now"><a href="#" target="_blank">15154864 --- 點擊名稱可直接預覽</a></p>
                     </div>
-                    <div class="logo">
-                        <img src="images/logo-quickclick.png">
+                    <div class="menu-renew">
+                        <p>09/17 最新的在最上面</p>
                     </div>
-                    <div class="menu-title">
-                        <input class="" type="" name="" value="" placeholder="點此新增菜單名稱">
+                    <div class="menu-executor">
+                        <p>由 店家eaa@mail.com</p>
                     </div>
-                    <div class="btn-menu-actions">
-                        <a class="btn--primary-m" href="#" target="_blank">預覽</a>
-                        <a class="btn--primary-m popup-link" href="#popup-activate-menu">啟用</a>
+                    <div class="menu-tools">
+                        <a href="#"><i class="far fa-copy"></i></a>
                     </div>
-                    <p class="update">上次更新：昨天 下午 6:00 · Kay</p>
                 </div>
-            </div> 
+                <div class="field">
+                    <div class="menu-remark">
+                        <p><a href="#">上架新品:南瓜湯</a></p>
+                    </div>
+                    <div class="menu-renew">
+                        <p>09/16 週四 11:38:24</p>
+                    </div>
+                    <div class="menu-executor">
+                        <p>由 店家eaa@mail.com</p>
+                    </div>
+                    <div class="menu-tools">
+                        <a href="#"><i class="far fa-copy"></i></a>
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="menu-remark">
+                        <p><a href="#">這是備注這是備注</a></p>
+                    </div>
+                    <div class="menu-renew">
+                        <p>09/16 週四 11:38:24</p>
+                    </div>
+                    <div class="menu-executor">
+                        <p>(ee發佈)</p>
+                    </div>
+                    <div class="menu-tools">
+                        <a href="#"><i class="far fa-copy"></i></a>
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="menu-remark">
+                        <p><a href="#">上架新品:南瓜湯</a></p>
+                    </div>
+                    <div class="menu-renew">
+                        <p>09/16 週四 11:38:24</p>
+                    </div>
+                    <div class="menu-executor">
+                        <p>由 店家eaa@mail.com</p>
+                    </div>
+                    <div class="menu-tools">
+                        <a href="#"><i class="far fa-copy"></i></a>
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="menu-remark">
+                        <p><a href="#">這是備注這是備注</a></p>
+                    </div>
+                    <div class="menu-renew">
+                        <p>09/16 週四 11:38:24</p>
+                    </div>
+                    <div class="menu-executor">
+                        <p>(Kay發佈)</p>
+                    </div>
+                    <div class="menu-tools">
+                        <a href="#"><i class="far fa-copy"></i></a>
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="menu-remark">
+                        <p><a href="#">上架新品:南瓜湯</a></p>
+                    </div>
+                    <div class="menu-renew">
+                        <p>09/16 週四 11:38:24</p>
+                    </div>
+                    <div class="menu-executor">
+                        <p>由 店家eaa@mail.com</p>
+                    </div>
+                    <div class="menu-tools">
+                        <a href="#"><i class="far fa-copy"></i></a>
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="menu-remark">
+                        <p><a href="#">這是備注這是備注</a></p>
+                    </div>
+                    <div class="menu-renew">
+                        <p>09/16 週四 11:38:24</p>
+                    </div>
+                    <div class="menu-executor">
+                        <p>(Kay發佈)</p>
+                    </div>
+                    <div class="menu-tools">
+                        <a href="#"><i class="far fa-copy"></i></a>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
