新增編輯選單頁

--- a/quickclick/add_new_menu.html
+++ b/quickclick/add_new_menu.html
@@ -22,7 +22,7 @@
                         </div>
                         <ul class="choose-method">
                             <li>
-                                <a href="#">
+                                <a href="menu-new.html">
                                     <p class="menu">新建一個菜單</p>
                                 </a>
                             </li>
