--- a/quickclick/menu-new-2.html
+++ b/quickclick/menu-new-2.html
@@ -222,9 +222,9 @@
                             <fieldset class="clearfix">
                                 <label class="item-title">停售設定</label>
                                 <div class="fillin-box">
-                                    <div class="swtich-type">
+                                    <div class="switch-type">
                                         <input id="" name="" type="checkbox" checked="">
-                                        <label class="switchbutton" for=""></label>
+                                        <label class="switch-button" for=""></label>
                                     </div>
                                 </div>
                             </fieldset>
@@ -250,7 +250,7 @@
                                             <option value="2">cccc</option>
                                         </select>
                                     </div>
-                                    <p class="go-seting">
+                                    <p class="go-setting">
                                         <a href="#">加購選項設定</a>
                                     </p>
                                 </div>
@@ -265,7 +265,7 @@
                                             <option value="2">cccc</option>
                                         </select>
                                     </div>
-                                    <p class="go-seting">
+                                    <p class="go-setting">
                                         <a href="#">商品屬性設定</a>
                                         <a class="reminder"></a>
                                         <span class="tooltip">
@@ -284,7 +284,7 @@
                                             <option value="2">韓國泡菜</option>
                                         </select>
                                     </div>
-                                    <p class="go-seting">
+                                    <p class="go-setting">
                                         <a href="#">商品標籤設定</a>
                                         <a class="reminder"></a>
                                         <span class="tooltip">
@@ -299,7 +299,7 @@
                         <div class="top-item-title">
                             <div class="title-content">
                                 <p>定價設定</p>
-                                <div class="arr"></div>
+                                <div class="arr arr-down"></div>
                             </div>
                         </div>
                         <from class="fillin-info">
@@ -321,7 +321,126 @@
                         <div class="top-item-title">
                             <div class="title-content">
                                 <p>加購設定</p>
-                                <div class="arr"></div>
+                                <div class="arr arr-down"></div>
+                            </div>
+                        </div>
+                        <div class="fillin-info">
+                            <div class="additional-content">
+                                <div class="title-content">
+                                    <p>飲料</p>
+                                    <!-- 展開 + arr-down -->
+                                    <div class="arr arr-down"></div>
+                                </div>
+                                <div class="product">
+                                    <h4 class="main-title">紅茶</h4>
+                                    <div class="additional-detail clearfix">
+                                        <p class="sub-title">尺寸</p>
+                                        <ul>
+                                            <li class="c-orange">
+                                                <p>大杯(+$5)</p>
+                                            </li>
+                                            <li class="c-lightgray">
+                                                <p>中杯</p>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="additional-detail clearfix">
+                                        <p class="sub-title">溫度</p>
+                                        <ul>
+                                            <li class="c-orange">
+                                                <p>常溫</p>
+                                            </li>
+                                            <li>
+                                                <p>去冰</p>
+                                            </li>
+                                            <li>
+                                                <p>熱</p>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="additional-detail clearfix">
+                                        <p class="sub-title">甜度</p>
+                                        <ul>
+                                            <li class="c-orange">
+                                                <p>無糖</p>
+                                            </li>
+                                            <li>
+                                                <p>微糖</p>
+                                            </li>
+                                            <li>
+                                                <p>三分糖</p>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="product">
+                                    <h4 class="main-title">奶茶</h4>
+                                    <div class="additional-detail clearfix">
+                                        <p class="sub-title">溫度</p>
+                                        <ul>
+                                            <li class="c-orange">
+                                                <p>常溫</p>
+                                            </li>
+                                            <li>
+                                                <p>去冰</p>
+                                            </li>
+                                            <li>
+                                                <p>熱</p>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="product">
+                                    <h4 class="main-title">咖啡</h4>
+                                    <div class="additional-detail clearfix">
+                                        <p class="sub-title">尺寸</p>
+                                        <ul>
+                                            <li class="c-orange">
+                                                <p>大杯(+$25)</p>
+                                            </li>
+                                            <li>
+                                                <p>中杯(+$5)</p>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="additional-detail clearfix">
+                                        <p class="sub-title">溫度</p>
+                                        <ul>
+                                            <li class="c-orange">
+                                                <p>熱</p>
+                                            </li>
+                                            <li>
+                                                <p>去冰</p>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="additional-detail clearfix">
+                                        <p class="sub-title">甜度</p>
+                                        <ul>
+                                            <li class="c-orange">
+                                                <p>無糖</p>
+                                            </li>
+                                            <li>
+                                                <p>微糖</p>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="additional-content">
+                                <div class="title-content">
+                                    <p>沙拉</p>
+                                    <div class="arr"></div>
+                                </div>
+                            </div>
+                            <div class="additional-content">
+                                <div class="title-content">
+                                    <p>甜點</p>
+                                    <div class="arr"></div>
+                                </div>
+                            </div>
+                            <div class="bottom-btn-right clearfix">
+                                <input class="btn btn--primary-m " type="submit" value="+ 新增加購選項">
                             </div>
                         </div>
                     </div>
@@ -342,7 +461,7 @@
                                     <p class="note">上傳正方形圖檔效果最佳。<br>
                                     建議規格：1200*1200px / JPG 或 PNG。<br>
                                     檔案容量：1MB以下</p>
-                                    <input class=" btn--primary-xl " type="submit" value="上傳圖片">
+                                    <input class=" btn--primary-m " type="submit" value="上傳圖片">
                                 </div>
                             </fieldset>
                         </div>
