調整編輯菜單細節
歷史菜單：
1.新增 - 編輯中的標籤
2.更改 - 複製

編輯菜單：
1.上面按鈕保留 預覽 + 儲存(黃)
2.更改類別和單品 - 新增的按鈕.
3.初次進菜單，移除單品
4.庫存每日重設

--- a/quickclick/menu-history.html
+++ b/quickclick/menu-history.html
@@ -35,6 +35,27 @@
                     <div class="menu-executor">
                         <p>啟用者</p>
                     </div>
+                    <div class="menu-tools">
+                        <p>複製 <a class="reminder"></a></p>
+                        <span class="tooltip">
+                            複製此菜單版本為最新版本。
+                        </span>
+                    </div>
+                </div>
+                <div class="field">
+                    <p class="label-type edit-type">編輯中</p>
+                    <div class="menu-remark">
+                        <p class="now"><a href="#" target="_blank">15154864 --- 點擊名稱可直接預覽</a></p>
+                    </div>
+                    <div class="menu-renew">
+                        <p>09/17 最新的在最上面</p>
+                    </div>
+                    <div class="menu-executor">
+                        <p>由 店家eaa@mail.com</p>
+                    </div>
+                    <div class="menu-tools">
+                        <a href="#"><i class="far fa-copy"></i></a>
+                    </div>
                 </div>
                 <div class="field">
                     <p class="label-type">啟用中</p>
