--- a/quickclick/menu-new-1.html
+++ b/quickclick/menu-new-1.html
@@ -19,21 +19,15 @@
                     返回菜單管理
                 </a>
             </h3>
-            <a class="btn-sort btn--primary-l">排序</a>
+            <a class="btn-sort btn--primary-l">展開收起</a>
             <div class="search-box">
                 <input class="default" type="text" placeholder="搜尋關鍵字">
             </div>
             <a class="btn-batch-operation btn--primary-l">批次操作</a>
-            <input class="btn-save btn--primary-xl " type="submit" value="儲存後啟用菜單">
+            <input class="btn-save btn--primary-xl " type="submit" value="儲存">
             <ul class="btn-menu-actions">
                 <li>
-                    <a class="save btn--primary-l" href="#" title="儲存"></a>
-                </li>
-                <li>
                     <a class="eye btn--primary-l" href="#" title="預覽"></a>
-                </li>
-                <li>
-                    <a class="import btn--primary-l" href="#" title="匯入"></a>
                 </li>
             </ul>
         </section>
@@ -69,8 +63,13 @@
                                 <a href="#"><i class="far fa-trash-alt"></i></a>
                             </div>
                         </div>
+                        <div class="text-add-product">
+                            <input class="btn--primary-m " type="submit" value="新增單品">
+                        </div>
                     </div>
-                    <input class="text-add-product default" placeholder="新增單品">
+                    <div class="text-add-category">
+                        <input class="btn--primary-m " type="submit" value="新增類別">
+                    </div>
                 </div>
             </div>
 
@@ -172,9 +171,13 @@
                                 <a href="#"><i class="far fa-trash-alt"></i></a>
                             </div>
                         </div>
+                        <div class="text-add-product">
+                            <input class="btn--primary-m " type="submit" value="新增單品">
+                        </div>
                     </div>
-                    <input class="text-add-product default" placeholder="新增單品">
-                    <input class="text-add-category default" placeholder="新增類別">
+                    <div class="text-add-category">
+                        <input class="btn--primary-m " type="submit" value="新增類別">
+                    </div>
                 </div>
 
                 <!-- 狀態三：未選取 狀態 -->
@@ -217,9 +220,13 @@
                                 <a href="#"><i class="far fa-trash-alt"></i></a>
                             </div>
                         </div>
+                        <div class="text-add-product">
+                            <input class="btn--primary-m " type="submit" value="新增單品">
+                        </div>
                     </div>
-                    <input class="text-add-product default" placeholder="新增單品">
-                    <input class="text-add-category default" placeholder="新增類別">
+                    <div class="text-add-category">
+                        <input class="btn--primary-m " type="submit" value="新增類別">
+                    </div>
                 </div>
             </div>  
         </section>
