--- a/quickclick/menu-new.html
+++ b/quickclick/menu-new.html
@@ -19,21 +19,15 @@
                     返回菜單管理
                 </a>
             </h3>
-            <a class="btn-sort btn--primary-l">排序</a>
+            <a class="btn-sort btn--primary-l">展開收起</a>
             <div class="search-box">
                 <input class="default" type="text" placeholder="搜尋關鍵字">
             </div>
             <a class="btn-batch-operation btn--primary-l">批次操作</a>
-            <input class="btn-save btn--primary-xl " type="submit" value="儲存後啟用菜單">
+            <input class="btn-save btn--primary-xl " type="submit" value="儲存">
             <ul class="btn-menu-actions">
                 <li>
-                    <a class="save btn--primary-l" href="#" title="儲存"></a>
-                </li>
-                <li>
                     <a class="eye btn--primary-l" href="#" title="預覽"></a>
-                </li>
-                <li>
-                    <a class="import btn--primary-l" href="#" title="匯入"></a>
                 </li>
             </ul>
         </section>
@@ -44,12 +38,12 @@
                         <div class="bars"></div>
                         <div class="arr"></div>
                         <p class="add-new"><a href="menu-new-1.html">點此編輯類別</a></p>
-                    </div>
+                    <!-- </div>
                     <div class="product">
                         <div class="bars"></div>
                         <div class="arr"></div>
                         <p class="add-new"><a href="menu-new-1.html">點此編輯單品</a></p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
