--- a/quickclick/menu-new-2.html
+++ b/quickclick/menu-new-2.html
@@ -19,22 +19,22 @@
                     返回菜單管理
                 </a>
             </h3>
-            <a class="btn-sort btn--primary-l">排序</a>
+            <a class="btn-sort btn--primary-l">展開收起</a>
             <div class="search-box">
                 <input class="default" type="text" placeholder="搜尋關鍵字">
             </div>
             <a class="btn-batch-operation btn--primary-l">批次操作</a>
-            <input class="btn-save btn--primary-xl " type="submit" value="儲存後啟用菜單">
+            <input class="btn-save btn--primary-xl " type="submit" value="儲存">
             <ul class="btn-menu-actions">
-                <li>
-                    <a class="save btn--primary-l" href="#" title="儲存"></a>
-                </li>
                 <li>
                     <a class="eye btn--primary-l" href="#" title="預覽"></a>
                 </li>
+                <!-- <li>
+                    <a class="save btn--primary-l" href="#" title="儲存"></a>
+                </li>
                 <li>
                     <a class="import btn--primary-l" href="#" title="匯入"></a>
-                </li>
+                </li> -->
             </ul>
         </section>
         <section class="middle-content both-content">
@@ -137,9 +137,13 @@
                                     <a href="#"><i class="far fa-trash-alt"></i></a>
                                 </div>
                             </div>
+                            <div class="text-add-product">
+                                <input class="btn--primary-m " type="submit" value="新增單品">
+                            </div>
                         </div>
-                        <input class="text-add-product default" placeholder="新增單品">
-                        <input class="text-add-category default" placeholder="新增類別">
+                        <div class="text-add-category">
+                            <input class="btn--primary-m " type="submit" value="新增類別">
+                        </div>
                     </div>
                     <div class="field">
                         <div class="category">
@@ -169,6 +173,9 @@
                             <div class="menu-tools">
                                 <a href="#"><i class="far fa-trash-alt"></i></a>
                             </div>
+                        </div>
+                        <div class="text-add-category">
+                            <input class="btn--primary-m " type="submit" value="新增類別">
                         </div>
                     </div>
                 </div>
@@ -214,6 +221,12 @@
                                 </div>
                             </fieldset>
                             <fieldset class="clearfix">
+                                <label class="item-title">庫存每日重設</label>
+                                <div class="fillin-box">
+                                    <input type="" name="" value="">
+                                </div>
+                            </fieldset>
+                            <fieldset class="clearfix">
                                 <label class="item-title">卡路里</label>
                                 <div class="fillin-box">
                                     <input type="" name="" value="">
@@ -238,21 +251,6 @@
                                             <option value="2">cccc</option>
                                         </select>
                                     </div>
-                                </div>
-                            </fieldset>
-                            <fieldset class="clearfix">
-                                <label class="item-title">加購選項</label>
-                                <div class="fillin-box">
-                                    <div class="the-select">
-                                        <select class="" name="">
-                                            <option value="0" selected="">套餐組合這裡選</option>
-                                            <option value="1">aaa</option>
-                                            <option value="2">cccc</option>
-                                        </select>
-                                    </div>
-                                    <p class="go-setting">
-                                        <a href="#">加購選項設定</a>
-                                    </p>
                                 </div>
                             </fieldset>
                             <fieldset class="clearfix">
@@ -288,7 +286,7 @@
                                         <a href="#">商品標籤設定</a>
                                         <a class="reminder"></a>
                                         <span class="tooltip">
-                                            將顯示於前台商品名稱旁。
+                                            顯示於消費者點餐畫面，商品名稱旁。
                                         </span>
                                     </p>
                                 </div>
