--- a/CRM/terms.html
+++ b/CRM/terms.html
@@ -436,7 +436,7 @@
                                     <p>業配口碑行銷 3篇/月</p>
                                 </li>
                                 <li>
-                                    <p> 200面</p>
+                                    <p>業配口碑行銷 3篇/月</p>
                                 </li>
                             </ul>
                         </div>
@@ -510,7 +510,7 @@
             </div>
             <div class="bottom-btn-tool">
                 <fieldset class="field">
-                    <input class="btn--primary-xl " type="submit" value="確認刪除">
+                    <input class="btn--primary-xl " type="submit" value="確認下架">
                 </fieldset>
             </div>
         </div>
