(補)聯絡人屬性+必選產品的顯示
1.產品的詳細內容 - 補上"必選產品"
2.聯絡人列表與詳細內容- 新增屬性與電話超連結

--- a/CRM/customer_info.html
+++ b/CRM/customer_info.html
@@ -154,7 +154,7 @@
                             </a>
                             <a href="#popup-contact-info" class="popup-link clearfix">
                                 <!-- 主要聯絡人會有星星 -->
-                                <p class="star name">張菁嵐</p>
+                                <p class="star name">張菁嵐（客服）</p>
                                 <p>0988-000123/02-2914-2658</p>
                                 <p>eikiychang@weblisher.com.tw</p>
                             </a>
@@ -164,7 +164,7 @@
                                 <i class="fas fa-pencil-alt" title="編輯"></i>
                             </a>
                             <a href="#popup-contact-info" class="popup-link  clearfix">
-                                <p class="name">黃宏偉</p>
+                                <p class="name">黃宏偉（財務）</p>
                                 <p>0988-845454/02-8041-1235</p>
                                 <p>janischen@weblisher.com.tw</p>
                             </a>
@@ -174,7 +174,7 @@
                                 <i class="fas fa-pencil-alt" title="編輯"></i>
                             </a>
                             <a href="#popup-contact-info" class="popup-link  clearfix">
-                                <p class="name">陳小春</p>
+                                <p class="name">陳小春（CS）</p>
                                 <p>0916-854941/02-2914-2658</p>
                                 <p>jennieli@weblisher.com.tw</p>
                             </a>
@@ -184,7 +184,7 @@
                                 <i class="fas fa-pencil-alt" title="編輯"></i>
                             </a>
                             <a href="#popup-contact-info" class="popup-link  clearfix">
-                                <p class="name">張震</p>
+                                <p class="name">張震（AM）</p>
                                 <p>0916-000123/02-2914-0000</p>
                                 <p>marketing@weblisher.com.tw</p>
                             </a>
@@ -194,7 +194,7 @@
                                 <i class="fas fa-pencil-alt" title="編輯"></i>
                             </a>
                             <a href="#popup-contact-info" class="clearfix">
-                                <p class="name">吳怡霖</p>
+                                <p class="name">吳怡霖（客服部）</p>
                                 <p>0988-000123/02-2914-2658</p>
                                 <p>service@holkee.com</p>
                             </a>
@@ -1017,15 +1017,19 @@
                         <div class="fillin-info">
                             <fieldset class="clearfix">
                                 <label class="item-title">Email</label>
-                                <p class="input-value"><a href="#" target="_blank">jennieli@weblisher.com.tw</a></p>
+                                <p class="input-value"><a href="mailto:jennieli@weblisher.com.tw" target="_blank">jennieli@weblisher.com.tw</a></p>
                             </fieldset>
                             <fieldset>
                                 <label class="item-title">手機</label>
-                                <p class="input-value">0930555153</p>
+                                <p class="input-value"><a href="tel:+886-930555153">0930-555153</a></p>
                             </fieldset>
                             <fieldset>
                                 <label class="item-title">市內電話</label>
-                                <p class="input-value">886-2-2502-1980 #315</p>
+                                <p class="input-value"><a href="tel:+886-2-25021980">886-2-2502-1980</a> #315</p>
+                            </fieldset>
+                            <fieldset>
+                                <label class="item-title">聯絡人屬性</label>
+                                <p class="input-value">財務</p>
                             </fieldset>
                             <fieldset>
                                 <label class="item-title">部門</label>
