--- a/CRM/product.html
+++ b/CRM/product.html
@@ -967,6 +967,10 @@
                                 <p class="input-value"><span>$10,600</span></p>
                             </fieldset>
                             <fieldset>
+                                <label class="item-title">必選產品</label>
+                                <p class="input-value"><span class="c-green"><i class="fas fa-check"></i> 委刊單必有產品</span></p>
+                            </fieldset>
+                            <fieldset>
                                 <label class="item-title">庫存量</label>
                                 <p class="input-value"><span>999</span></p>
                             </fieldset>
