拿掉右邊那一塊

--- a/jetfi_wifi_jp/asia_00.html
+++ b/jetfi_wifi_jp/asia_00.html
@@ -75,7 +75,7 @@
 							</div>
 						</div>
 					</a>
-					<a class="plan_info right_info clearfix" href="#">
+					<!-- <a class="plan_info right_info clearfix" href="#">
 						<div class="for_left clearfix">
 							<div class="country_amount img_default">
 								<h4>“通常”プラン</h4>
@@ -86,7 +86,7 @@
 						<div class="country_info clearfix">
 							<div class="SNS_icon img_default"></div>
 						</div>
-					</a>
+					</a> -->
 				</div>
 				<div class="premium_plan clearfix">
 					<div class="text_info">
